[gd_scene load_steps=14 format=2]

[ext_resource path="res://Character3.gd" type="Script" id=1]
[ext_resource path="res://Graphics/park.png" type="Texture" id=2]
[ext_resource path="res://Graphics/3 blush.png" type="Texture" id=3]
[ext_resource path="res://Graphics/3 neutral.png" type="Texture" id=4]
[ext_resource path="res://Graphics/3 suprised.png" type="Texture" id=5]
[ext_resource path="res://Graphics/3 angry.png" type="Texture" id=6]
[ext_resource path="res://Graphics/3 happy.png" type="Texture" id=7]
[ext_resource path="res://box.png" type="Texture" id=8]
[ext_resource path="res://TextBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Fonts/SpecialElite copy.ttf" type="DynamicFontData" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "blush",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "neutral",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "surprised",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "happy",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 38
extra_spacing_top = 10
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 10 )

[node name="Character3" type="Node2D"]
script = ExtResource( 1 )

[node name="park" type="Sprite" parent="."]
modulate = Color( 0.831373, 0.831373, 0.831373, 1 )
position = Vector2( 960, 540 )
scale = Vector2( 0.65, 0.6 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0.901961, 1, 1 )
position = Vector2( 540, 440 )
scale = Vector2( 0.33, 0.33 )
frames = SubResource( 1 )
animation = "neutral"

[node name="box" type="Sprite" parent="."]
modulate = Color( 4.67059, 1.76863, 5.54118, 0.901961 )
position = Vector2( 960, 860 )
scale = Vector2( 28, 5 )
texture = ExtResource( 8 )

[node name="TextBox" parent="." instance=ExtResource( 9 )]

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 150.0
margin_top = 400.0
margin_right = 470.0
margin_bottom = 720.0

[node name="Info" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="box2" type="Sprite" parent="Info"]
modulate = Color( 3.51, 1.18, 1.16, 1 )
position = Vector2( 960, 540 )
scale = Vector2( 16, 13 )
texture = ExtResource( 8 )

[node name="InfoLabel" type="RichTextLabel" parent="Info"]
margin_left = 510.0
margin_top = 180.0
margin_right = 1410.0
margin_bottom = 830.0
custom_fonts/normal_font = SubResource( 2 )
text = "Name: Jakob Ingebrigsten
Occupation: Professional Runner
Net Worth: $4.3 million
Place of Origin: Norway
Fun Fact #1: He was the first highschooler to run a sub-4 mile. Did it when he was 16.
Fun Fact #2: He was disqualified at Doha World Championships 2019
Nickname: Rabbit
Drawback #1: Virgin
Drawback #2: Arrogant


"
scroll_active = false

[node name="InfoLabel2" type="RichTextLabel" parent="Info"]
margin_left = 510.0
margin_top = 180.0
margin_right = 1410.0
margin_bottom = 830.0
custom_fonts/normal_font = SubResource( 2 )
text = "Their attraction to You: 0
Monthly support: $100
"
scroll_active = false

[node name="Next" type="Button" parent="Info"]
margin_left = 1200.0
margin_top = 810.0
margin_right = 1229.0
margin_bottom = 833.0
rect_scale = Vector2( 4, 3 )
custom_fonts/font = SubResource( 3 )
text = "->"

[node name="Hide" type="Button" parent="Info"]
margin_left = 590.0
margin_top = 800.0
margin_right = 618.0
margin_bottom = 826.0
rect_scale = Vector2( 4, 3 )
custom_fonts/font = SubResource( 3 )
text = "X"
[connection signal="pressed" from="Button" to="." method="showInfo"]
[connection signal="pressed" from="Info/Next" to="." method="nextPage"]
[connection signal="pressed" from="Info/Hide" to="." method="hideInfo"]
